2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xdot.c: Simplify.
	
	* benchmarks/blas/bench-daxpy.c: Check array size differently.

	* benchmarks/blas/templates/xasum.c,
	* benchmarks/blas/sasum.c,
	* benchmarks/blas/dasum.c,
	* benchmarks/blas/bench-sasum.c,
	* benchmarks/blas/bench-dasum.c,
	* benchmarks/blas/bench-sasum.inputs,
	* benchmarks/blas/bench-dasum.inputs,
	* benchmarks/blas/asum.d1,
	* benchmarks/blas/asum.d2,
	* benchmarks/blas/asum.d3,
	* benchmarks/blas/templates/xrot.c,
	* benchmarks/blas/srot.c,
	* benchmarks/blas/drot.c,
	* benchmarks/blas/bench-srot.c,
	* benchmarks/blas/bench-drot.c,
	* benchmarks/blas/bench-srot.inputs,
	* benchmarks/blas/bench-drot.inputs,
	* benchmarks/blas/rot.d1,
	* benchmarks/blas/rot.d2,
	* benchmarks/blas/rot.d3: New.

2009-10-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix algorithm bug in `checkers' demo.
	
	* demo/checkers.c: Change check for position. 

2009-10-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' demo.

	* benchmarks/mandel/mandel.c: Demonstrate measure intervals by
	defining two of them in the "work" part.

2009-10-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the benchmark framework.
	
	* benchmarks/lib/benchmark.h,	
	* benchmarks/lib/benchmark.c: Allow the `work' part of a benchmark
	to define sub-intervals for measurements.

2009-10-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the benchmark outer thread.
	
	* benchmarks/lib/benchmark.c: Enclose the measurements in a Fibre
	array when the Fibre format is specified.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/benchmarks.mk (clean-local-bench): Use `if' to avoid
	error when `bench.mk' doesn't exist.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert the `mandel' demo to the new benchmark framework.

	* demo/mandel.c: Rename to...	
	* benchmarks/mandel/mandel.c: ...here. Change to become a